# cmdliner

./: .gitignore  .merlin  .typerex  B0.ml  CHANGES  CHANGES.md  DEVEL.md  Makefile  Makefile.in  README  README.md  TODO.md  _oasis  _tags  build  build.ml  cmdliner.opam  configure  dune  dune-project  opam
completion/: PROTOCOL.md  bash-completion.sh  zsh-completion.sh
doc/: cli.mld  cookbook.mld  (+5 more)
src/: META  cmdliner.ml  cmdliner.mli  cmdliner.mllib  cmdliner_arg.ml  cmdliner_arg.mli  cmdliner_base.ml  cmdliner_base.mli  cmdliner_cline.ml  cmdliner_cline.mli  cmdliner_cmd.ml  cmdliner_cmd.mli  cmdliner_completion.ml  cmdliner_completion.mli  cmdliner_def.ml  cmdliner_def.mli  cmdliner_docgen.ml  cmdliner_docgen.mli  cmdliner_eval.ml  cmdliner_eval.mli  cmdliner_info.ml  cmdliner_info.mli  cmdliner_manpage.ml  cmdliner_manpage.mli  cmdliner_msg.ml  cmdliner_msg.mli  cmdliner_suggest.ml  cmdliner_suggest.mli  cmdliner_term.ml  cmdliner_term.mli  cmdliner_term_deprecated.ml  cmdliner_trie.ml  cmdliner_trie.mli  dune  jbuild
src/tool/: bash-cmdliner.sh  bash-completion.sh  cmdliner_completion.ml  cmdliner_data.ml  cmdliner_main.ml  pwsh-completion.ps1  zsh-cmdliner.sh  zsh-completion.sh
test/: blueprint_cmds.ml  blueprint_min.ml  blueprint_tool.ml  chorus.ml  cp.ml  cp_ex.ml  darcs.ml  darcs.t  darcs_ex.ml  dune  dynargs.ml  example_chorus.ml  example_cp.ml  example_darcs.ml  example_group.ml  example_mixed_args.ml  example_revolt.ml  example_revolt1.ml  example_revolt2.ml  example_rm.ml  example_tail.ml  groups.ml  groups.t  man_test.ml  random_ex.ml  revolt.ml  rm.ml  rm_ex.ml  tail_ex.ml  test_arg.ml  test_capture.ml  test_cmd.ml  test_completion.ml  test_deprecation.ml  test_err.ml  test_legacy_prefix.ml  test_man.ml  test_man_utf8.ml  test_nest.ml  test_pos.ml  (+12 more)
(+13 files in other folders)
