opam-version: "2.0"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
homepage: "http://erratique.ch/software/cmdliner"
doc: "http://erratique.ch/software/cmdliner/doc/Cmdliner"
dev-repo: "git+http://erratique.ch/repos/cmdliner.git"
bug-reports: "https://github.com/dbuenzli/cmdliner/issues"
tags: [ "cli" "system" "declarative" "org:erratique" ]
license: "ISC"
depends:[
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build}
  "result"
  "ocaml" {>= "4.02.3"}
]
build: [[
  "ocaml" "pkg/pkg.ml" "build"
          "--pinned" "%{pinned}%"
  ]]
