(executables
 (names test_man
        test_man_utf8
        test_pos
        test_pos_rev
        test_pos_all
        test_pos_left
        test_pos_req
        test_opt_req
        test_term_dups
        test_with_used_args
        darcs_ex)
 (libraries cmdliner))

(cram
 (applies_to groups)
 (deps ./groups.exe))

(cram
 (applies_to darcs)
 (deps ./darcs_ex.exe))
